--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "firebase": "^7.14.3",
     "node-sass": "^4.14.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.4.1"
   }
 }
